change button size

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 				<td ><button id="btn_seach" style="margin-bottom:0px;border-bottom-left-radius: 0;border-top-left-radius: 0;border" type="button" class="btn btn-primary">搜索图片</button></td></tr>
 		</table>
 		<div class="btn-group" style="margin:10px;">
-	<button type="button" style="margin-right:0px;" class="btn btn-default">moeimg</button>
-	<button type="button" style="margin-left:0px;margin-right:0px;" class="btn btn-default">cosplay</button>
-	<button type="button" style="margin-left:0px;" class="btn btn-default">gamersky</button>
+	<button type="button" style="margin-right:0px;" class="btn btn-default btn-sm">moeimg</button>
+	<button type="button" style="margin-left:0px;margin-right:0px;" class="btn btn-default btn-sm">cosplay</button>
+	<button type="button" style="margin-left:0px;" class="btn btn-default btn-sm">gamersky</button>
 </div>
 	<div id="fh5co-main">
 		<div class="container">
