--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<table style="margin:10px;">
 			<tr><td colspan="2"><h2><a href="javascript:location.href=window.location.origin+window.location.pathname">YFAVOR-GALLERY</a></h2></td></tr>
 			<tr>
-				<td style="width:100%;"><input id="txt_seach"  class="form-control" type="text"  style="border-bottom-right-radius: 0;border-top-right-radius: 0;"   placeholder="请输入图片名称"></td>
+				<td style="width:100%;"><input id="txt_seach"  class="form-control" type="text"  style="border-bottom-right-radius: 0;border-top-right-radius: 0;height:49px;"   placeholder="请输入图片名称"></td>
 				<td ><button id="btn_seach" style="margin-bottom:0px;border-bottom-left-radius: 0;border-top-left-radius: 0;border" type="button" class="btn btn-primary">搜索图片</button></td></tr>
 		</table>
 		<div class="btn-group" style="margin:10px;">
