--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				margin-top: -10px;
 				margin-bottom:0px;
 			}
+			body{
+				background-color: #FFF0F4;
+			}
 	</style>
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
