--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					bottom : 20px;
 			}
 			#c{
-				position:absolute;
+				position:fixed;
 				z-index:-2;
 				margin: 0px;
 				margin-top: -10px;
