--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 			body{
 				background-color: #FFF0F4;
 			}
+			.btn-group>button{
+				background-color: #EF5353;
+				color:#FFF;
+			}
 	</style>
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
@@ -81,6 +85,7 @@
 	<button type="button" style="margin-left:0px;margin-right:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">cosplay</button>
 	<button type="button" style="margin-left:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">gamersky</button>
 </div>
+
 <div class="goTop" id="js-go_top"><img src="image/icon_top.png" alt="回到顶部图片"></div>
 	<div id="fh5co-main">
 		<div class="container">
