--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 	</div>
 	<center>
 	<table style="margin:10px;">
-		<tr><td style="width:50%;"><button id="btn_up" style="margin-bottom:0px;" type="button" class="btn btn-primary">上一页</button></td>
-			<td style="width:50%;"><button id="btn_next" style="margin-bottom:0px;" type="button" class="btn btn-primary">下一页</button></td></tr>
+		<tr><td style="width:35%;"><button id="btn_up" style="margin-bottom:0px;" type="button" class="btn btn-primary">上一页</button></td>
+			<td style="width:30%;"><button id="btn_home" style="margin-bottom:0px;" type="button" class="btn btn-primary">首页</button></td>
+			<td style="width:35%;"><button id="btn_next" style="margin-bottom:0px;" type="button" class="btn btn-primary">下一页</button></td></tr>
 	</table>
 </center>
 
@@ -264,6 +265,9 @@ $(function() {
 						if(window.location.href.indexOf("?")>-1) urlChar=window.location.href+"&offset=2";
 						location.href=urlChar;
 					}
+        });
+				$("#btn_home").click(function(){
+						location.href=window.location.origin+window.location.pathname;
         });
 				$(".btn-group").on('click', 'button', function(event) {
 					event.preventDefault();
