--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	<!-- Theme Style -->
 	<link rel="stylesheet" href="css/style.css">
 
+<link rel="icon" href="favicon.ico" type="image/x-icon" id="page_favionc">
+
 	<style type="text/css">
 			.goTop >img{
 				z-index:9999;
