--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-
-
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Magnific Popup -->
@@ -33,7 +31,7 @@
 	<!-- Theme Style -->
 	<link rel="stylesheet" href="css/style.css">
 
-<link rel="icon" href="image/favicon.ico" type="image/x-icon" id="page_favionc">
+	<link rel="icon" href="image/favicon.ico" type="image/x-icon" id="page_favionc">
 
 	<style type="text/css">
 			.goTop >img{
@@ -65,8 +63,8 @@
 	</style>
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
-
-<script src="js/GoToTop.js"></script>
+	<!-- to top script -->
+	<script src="js/GoToTop.js"></script>
 
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
