--- a/index.html
+++ b/index.html
@@ -80,27 +80,28 @@
 				<td style="width:100%;"><input id="txt_seach"  class="form-control" type="text"  style="border-bottom-right-radius: 0;border-top-right-radius: 0;height:49px;"   placeholder="请输入图片名称"></td>
 				<td ><button id="btn_seach" style="margin-bottom:0px;border-bottom-left-radius: 0;border-top-left-radius: 0;border" type="button" class="btn btn-primary">搜索图片</button></td></tr>
 		</table>
-		<div class="btn-group" style="margin:10px;">
-	<button type="button" style="margin-right:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">moeimg</button>
-	<button type="button" style="margin-left:0px;margin-right:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">cosplay</button>
-	<button type="button" style="margin-left:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">gamersky</button>
-</div>
+		<center>
+		<!-- images Type -->
+	 	<div class="btn-group" style="margin:10px;">
+			<button type="button" style="margin-right:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">moeimg</button>
+			<button type="button" style="margin-left:0px;margin-right:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">cosplay</button>
+			<button type="button" style="margin-left:0px;padding-left:15px;padding-right:15px;" class="btn btn-default btn-sm">gamersky</button>
+		</div>
+		</center>
 
-<div class="goTop" id="js-go_top"><img src="image/icon_top.png" alt="回到顶部图片"></div>
-	<div id="fh5co-main">
-		<div class="container">
-			<div class="row">
-
-      </div>
-    </div>
-	</div>
+		<div class="goTop" id="js-go_top"><img src="image/icon_top.png" alt="回到顶部图片"></div>
+		<div id="fh5co-main">
+			<div class="container">
+				<div class="row"></div>
+    	</div>
+		</div>
 	<center>
 	<table style="margin:10px;">
 		<tr><td style="width:35%;"><button id="btn_up" style="margin-bottom:0px;" type="button" class="btn btn-primary">上一页</button></td>
 			<td style="width:30%;"><button id="btn_home" style="margin-bottom:0px;" type="button" class="btn btn-primary">首页</button></td>
 			<td style="width:35%;"><button id="btn_next" style="margin-bottom:0px;" type="button" class="btn btn-primary">下一页</button></td></tr>
 	</table>
-</center>
+	</center>
 
 	<script src="js/index.js"></script>
 
