修改类别问题

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 		</div>
 	<center>
 	<table style="margin:10px;">
-		<tr><td style="width:35%;"><button id="btn_up" style="margin-bottom:0px;" type="button" class="btn btn-primary">上一页</button></td>
+		<tr>
+			<td style="width:35%;">
+				<button id="btn_back" style="margin-bottom:0px;display:none" type="button" class="btn btn-primary">返回</button>
+				<button id="btn_up" style="margin-bottom:0px;" type="button" class="btn btn-primary">上一页</button>
+			</td>
 			<td style="width:30%;"><button id="btn_home" style="margin-bottom:0px;" type="button" class="btn btn-primary">首页</button></td>
 			<td style="width:35%;"><button id="btn_next" style="margin-bottom:0px;" type="button" class="btn btn-primary">下一页</button></td></tr>
 	</table>
