--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<div style="background-color: #FFF;box-shadow: 0px 20px 20px -20px #5E5E5E;padding-bottom: 5px;padding-left: 5%;padding-right: 5%">
 		<table style="margin-bottom:10px;">
 			<tr><td colspan="2"><h2><a href="javascript:location.href=window.location.origin+window.location.pathname"><img src="image/logo.png"></img></a></h2></td>
-				<td style="width:100%;"><input id="txt_seach"  class="form-control" type="text"  style="border-bottom-right-radius: 0;border-top-right-radius: 0;height:49px;"   placeholder="请输入图片名称"></td>
+				<td style="width:100%;"><input id="txt_seach"  class="form-control" type="text"  style="border-bottom-right-radius: 0;border-top-right-radius: 0;height:49px;"   placeholder="名称"></td>
 				<td style="padding-right:10%"><button id="btn_seach" style="margin-bottom:0px;border-bottom-left-radius: 0;border-top-left-radius: 0;border" type="button" class="btn btn-primary">搜索图片</button></td></tr>
 		</table>
 	</div>
